ingress-wildcard-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
  #   certmanager.k8s.io/acme-challenge-type: dns01
  #   certmanager.k8s.io/acme-dns01-provider: cf-dns
  #   nginx.ingress.kubernetes.io/proxy-body-size: 8m
  #   nginx.ingress.kubernetes.io/affinity: cookie
spec:
  tls:
  - hosts:
    - echo1.localhost # Ip do Loadbalancer
    - echo2.localhost
    - echo3.localhost
  rules:
  - host: "echo1.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo1
            port:
              number: 80
  - host: "echo2.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo2
            port:
              number: 80
  - host: "echo3.localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo3
            port:
              number: 80
